--- a/package.json
+++ b/package.json
@@ -10,5 +10,12 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@mdi/font": "^7.4.47",
+        "vue": "^3.4.36",
+        "vue-loader": "^17.4.2",
+        "vue-router": "^4.4.3",
+        "vue-template-compiler": "^2.7.16"
     }
 }
